Issue #7 - adjusted front content image alignment. calibrated center positioning

--- a/sites/all/themes/dcmanila2014/css/global.css
+++ b/sites/all/themes/dcmanila2014/css/global.css
@@ -34,8 +34,8 @@ h2.site-name {
 
 #front-content {
   text-align:center;
-  margin-top: 100px;
-  margin-bottom: 50px;
+  margin-top: 75px;
+  margin-bottom: 75px;
 
 }
 
